<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/img"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

<TableRow android:id="@+id/TableRow06" android:layout_width="fill_parent" android:layout_height="wrap_content">
  <TextView android:id="@+id/TextView06" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/company" android:textSize="16px"></TextView>
  <EditText android:id="@+id/EditText06" android:layout_height="wrap_content" android:layout_width="fill_parent"/>
</TableRow>

<TableRow android:id="@+id/TableRow01" android:layout_width="fill_parent" android:layout_height="wrap_content">
  <TextView android:id="@+id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/name" android:textSize="16px"></TextView>
  <EditText android:id="@+id/EditText01" android:layout_height="wrap_content" android:layout_width="fill_parent"/>
</TableRow>

<TableRow android:id="@+id/TableRow02" android:layout_width="fill_parent" android:layout_height="wrap_content">
  <TextView android:id="@+id/TextView02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mobile" android:textSize="16px"></TextView>
  <EditText android:id="@+id/EditText02" android:layout_height="wrap_content" android:layout_width="fill_parent"></EditText>
</TableRow>

<TableRow android:id="@+id/TableRow03" android:layout_width="fill_parent" android:layout_height="wrap_content">
  <TextView android:id="@+id/TextView03" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/email" android:textSize="16px"></TextView>
  <EditText android:id="@+id/EditText03" android:layout_height="wrap_content" android:layout_width="fill_parent"></EditText>
</TableRow>

  <TableRow android:id="@+id/TableRow04" android:layout_width="fill_parent" android:layout_height="wrap_content">
    <TextView android:id="@+id/TextView04" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/qq" android:textSize="16px"></TextView>
    <EditText android:id="@+id/EditText04" android:layout_height="wrap_content" android:layout_width="fill_parent"></EditText>
  </TableRow>

<TableRow android:id="@+id/TableRow05" android:gravity="right" android:layout_width="fill_parent" android:layout_height="wrap_content">
  <Button android:id="@+id/Button01" android:layout_height="wrap_content" android:text="@string/save" android:textSize="16px" android:layout_width="wrap_content"></Button>
  <Button android:id="@+id/Button02" android:layout_height="wrap_content" android:text="@string/cancel" android:textSize="16px" android:layout_width="wrap_content"></Button>
  <Button android:id="@+id/Button03" android:layout_height="wrap_content" android:text="@string/call" android:textSize="16px" android:layout_width="wrap_content"></Button>
  <Button android:id="@+id/Button04" android:layout_height="wrap_content" android:text="@string/message" android:textSize="16px" android:layout_width="wrap_content"></Button>
</TableRow>
</LinearLayout>